# Tosca

./: LICENSE  README.md
backend/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  seed_db.sh  setup.sh
backend/login/: Cargo.toml  README.md
backend/login/dev_login/: Cargo.toml  Dockerfile  index.html
backend/login/dev_login/src/: main.rs
backend/login/oidc/: Cargo.toml  config.toml
backend/login/oidc/src/: lib.rs  openid_config.rs  openid_connect.rs
backend/login/src/: openid_config.rs  openid_connect.rs
backend/migrations/2020-11-23-081349_create_tables/: up.sql
backend/res/: dev_foreign.toml
backend/seed_db/: Cargo.toml  Dockerfile  README.md
backend/seed_db/src/: main.rs
backend/src/: schema.rs
backend/user/: README.md
backend/user/toml_provider/: Cargo.toml  Dockerfile
backend/user/toml_provider/res/: .gitignore  seed_db.toml  user_db.toml  user_db.toml.example
backend/user/toml_provider/src/: main.rs
backend/user/toml_provider/user_format/: Cargo.toml
backend/user/toml_provider/user_format/src/: lib.rs
backend/web/: Cargo.toml  run_debug_docker.sh  run_tests.sh  run_tests_docker.sh
backend/web/_test/: all.sh  wait_for_backend.py
backend/web/_test/openapi/: output  requirements.txt  run.sh  test.py
backend/web/_test/openapi/tests/: conftest.py  test_workspaces.py
backend/web/_test/tests/: 1_queue.py  get_workspaces.py  post_workspaces.py  queue_test.py  workspaces.py  workspaces_test.py
backend/web/db_connector/: .env.example  Cargo.toml
backend/web/db_connector/migrations/2020-11-23-081349_create_tables/: down.sql  up.sql
backend/web/db_connector/migrations/2021-03-28-121555_add_signup_time_queue_slot/: down.sql
backend/web/db_connector/src/: lib.rs  queue.rs  schema.rs  workspace.rs
backend/web/migrations/2020-11-23-081349_create_tables/: down.sql  up.sql
backend/web/src/: schema.rs
backend/web/swagger/: README.md  api.yaml  docker-compose.yml
backend/web/test/: queue_test.py  workspaces_test.py
backend/web/web_backend/: .gitignore  Cargo.toml  Dockerfile  README.md  config.toml  config_docker.toml  generate_certificate
backend/web/web_backend/db_connector/: Cargo.toml  Dockerfile  run_migration.sh
backend/web/web_backend/db_connector/migrations/2020-11-23-081349_create_tables/: down.sql
backend/web/web_backend/db_connector/migrations/2021-03-28-121555_add_signup_time_queue_slot/: up.sql
backend/web/web_backend/db_connector/migrations/2021-04-22-052740_add_remote_workspace_id/: down.sql  up.sql
backend/web/web_backend/db_connector/migrations/2021-05-06-061246_rename_workspace_creator/: down.sql  up.sql
backend/web/web_backend/db_connector/src/: lib.rs  queue.rs  schema.rs  signup.rs  workspace.rs
backend/web/web_backend/res/: cert.pem  key.pem
backend/web/web_backend/src/: cache.rs  lib.rs  login_provider.rs  user_provider.rs
backend/web/web_backend/src/api/: mod.rs  queue.rs  workspace.rs
frontend/: Dockerfile  README.md  angular.json  docker-compose.yml  package-lock.json  package.json
frontend/assets/: global.css
frontend/old_svelte/: package-lock.json  package.json
frontend/old_svelte/assets/: global.css
frontend/old_svelte/src/pages/: index.svelte
frontend/old_svelte/src/pages/_components/: Button.svelte  IconButton.svelte  IconLink.svelte  InputWithButton.svelte  LogInContainer.svelte
frontend/old_svelte/src/pages/_components/workspace_list/: WorkspaceListItem.svelte
frontend/old_svelte/src/pages/workspaces/: _fallback.svelte
frontend/src/: index.html  styles.css  tosca-app-theme.scss
frontend/src/app/: app-routing.module.ts  app.component.css  app.component.html  app.component.ts  app.module.ts  globals.ts  mock.ts  studentqueue.ts  workspaces.service.ts  workspaces.ts
frontend/src/app/footer/: footer.component.css  footer.component.html
frontend/src/app/header/: header.component.css  header.component.html
frontend/src/app/nav-bar/: nav-bar.component.css  nav-bar.component.html  nav-bar.component.ts
frontend/src/app/tosca-queue/: tosca-queue.component.css  tosca-queue.component.html  tosca-queue.component.spec.ts  tosca-queue.component.ts
frontend/src/app/tosca-queue-item/: tosca-queue-item.component.css  tosca-queue-item.component.html  tosca-queue-item.component.spec.ts  tosca-queue-item.component.ts
frontend/src/app/tosca-signup/: tosca-signup.component.html  tosca-signup.component.spec.ts  tosca-signup.component.ts
frontend/src/app/tosca-workspace/: tosca-workspace.component.css  tosca-workspace.component.html  tosca-workspace.component.spec.ts  tosca-workspace.component.ts
frontend/src/app/workspace-list/: add-workspace-dialog.html  workspace-list.component.css  workspace-list.component.html  workspace-list.component.ts
frontend/src/pages/: Information.svelte  Titlebar.svelte  WorkspacesList.svelte  index.svelte
frontend/src/pages/_components/: BasePage.svelte  Container.svelte  EditableField.svelte  IconButton.svelte  Information.svelte  InputWithButton.svelte
frontend/src/pages/_components/workspace_list/: WorkspaceItem.svelte  WorkspaceList.svelte
frontend/src/pages/login/: index.svelte
frontend/src/pages/workspaces/: index.svelte
frontend/src/pages/workspaces/workspace/: Index.svelte
svelte_frontend/: package-lock.json  package.json  rollup.config.js
svelte_frontend/.routify/: config.js  routes.js  urlIndex.json
svelte_frontend/public/: global.css  index.html
svelte_frontend/src/: App.svelte  Container.svelte  Information.svelte  Item.svelte  ItemList.svelte  Titlebar.svelte  WorkspacesList.svelte
svelte_frontend/src/pages/: Information.svelte  Item.svelte  WorkspacesList.svelte
util/: database_diagram.drawio  database_diagram.xml
