[package]
name = "openidtest"
version = "0.1.0"
authors = ["Klas <klasa@cs.umu.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
default-run = "login_server"

[dependencies]
actix = "0.10"
rustls = "0.19"
serde = "1.0"
serde_json = "1.0"
base64 = "0.13"
anyhow = "1.0"
jsonwebtoken = "7"
toml = "0.5"
rand = "0.8"
futures = "0.3"
structopt = "0.3"

[dependencies.actix-web]
version = "4.0.0-beta.1"
features = ["rustls"]

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "blocking", "rustls-tls", "rustls"]

[dependencies.tokio]
version = "1"
features = ["sync", "macros"]
