[package]
name = "seed_db"
version = "0.1.0"
authors = ["Klas <klasafgeijerstam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
db_connector = { path = "../web/web_backend/db_connector" }
user_format = { path = "../user/toml_provider/user_format" }
fake = "2.4.0"
toml = "0.5"
rand = "0.8"
chrono = "0.4"
structopt = "0.3"
progressing = "3"
