[package]
name = "dev_login"
version = "0.1.0"
authors = ["Klas af Geijerstam <klasafgeijerstam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
structopt = "0.3"
actix-files = "0.5"
pretty_env_logger = "0.4"

[dependencies.actix-web]
version = "3"
features = ["rustls"]

[dependencies.reqwest]
version = "0.11"
default-features = false
