[package]
name = "tosca_openid_provider"
version = "0.1.0"
authors = ["Klas <klasafgeijerstam@gmail.com>"]
edition = "2018"

default-run = "login_server"

[dependencies]
rustls = "0.18"
serde = "1.0"
serde_json = "1.0"
anyhow = "1.0"
jsonwebtoken = "7"
toml = "0.5"
rand = "0.8"
structopt = "0.3"

[dependencies.actix-web]
version = "3"
features = ["rustls"]

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls", "rustls"]

[dependencies.tokio]
version = "1"
features = ["sync", "macros"]
