[package]
name = "toml_provider"
description = "Tosca user provider, loads user data and permissions from a TOML file"
version = "0.1.0"
authors = ["Klas af Geijerstam <klasafgeijerstam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
actix-web = "3"
toml = "0.5"
pretty_env_logger = "0.4"
user_format = { path = "user_format" }
