[package]
name = "db_connector"
version = "0.1.0"
authors = ["Klas af Geijerstam <klasafgeijerstam@gmail.com>"]
edition = "2018"


[dependencies]
diesel = { version = "1", features = ["postgres", "r2d2"] }
r2d2 = "0.8.9"
dotenv = "0.15.0"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
