[package]
name = "web_backend"
version = "0.1.0"
authors = ["Klas <klasafgeijerstam@gmail.com>"]
edition = "2018"

[dependencies]
structopt = "0.3"
reqwest = "0.10"
rustls = "0.18"
anyhow = "1"
toml = "0.5"
log = "0.4"
pretty_env_logger = "0.4"
db_connector = { path = "../db_connector" }

[dependencies.actix-web]
version = "3"
features = ["rustls"]

[dependencies.serde]
version = "1"
features = ["derive"]
