[package]
name = "web_backend"
version = "0.1.0"
authors = ["Klas <klasafgeijerstam@gmail.com>"]
edition = "2018"

[dependencies]

actix-web-httpauth = "0.5"
actix-cors = "0.5.4"
structopt = "0.3"
rustls = "0.18"
anyhow = "1"
toml = "0.5"
log = "0.4"
pretty_env_logger = "0.4"
db_connector = { path = "db_connector" }
futures-util = "0.3.12"
futures = "0.3"

[dependencies.actix-web]
version = "3"
features = ["rustls"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.tokio]
version = "0.3"
features = ["sync"]

[dependencies.reqwest]
version = "0.10"
default-features = false
features = ["json", "rustls-tls", "rustls"]
